Cambio 2 Pagina Web

--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
 <div class="container-fluid  bg-primary">
   <br>
   <br>
-  <h1>¿Cual es el tema general de este Proyecto?</h1>
+  <h1 class="t">¿Cual es el tema general de este Proyecto?</h1>
   <div class="row">
-    <div class="col-lg-5 col-md-12 col-sm-12  col-12 espacio texto1 d-flex align-items-center justify-content-center ">
+    <div class="col-lg-5 col-md-12 col-sm-12  col-12 espacio texto12 d-flex align-items-center justify-content-center ">
       <br>
       <br>
       <p>
