--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
 
       <ul class="navbar-nav d-flex justify-content-center aling-items-center ">
         <li class="nav-item">
-          <a class="nav-link custom-link" aria-current="page" href="#">INICIO</a>
+          <a class="nav-link custom-link" aria-current="page" href="">INICIO</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link custom-link" href="#">FUNCIONALIDADES</a>
+          <a class="nav-link custom-link" href="./Pages/Funcionalidades.html">FUNCIONALIDADES</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link custom-link" href="#">ACERCA DE NOSOTROS</a>
+          <a class="nav-link custom-link" href="./Pages/Acerca De Nosotros.html">ACERCA DE NOSOTROS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link custom-link" href="#">CONTACTANOS</a>
+          <a class="nav-link custom-link" href="./Pages/Contactanos.html">CONTACTANOS</a>
         </li>
       </ul>
 
@@ -219,6 +219,8 @@
   </div>
 </div>
 <br>
+
+
 
 
 
