--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <a class="navbar-brand" href="#">
           <img src="./IMG/compras.png" width="50" alt="Logo de la pagina web ">
         </a>
-        <p class="ms-3 mb-0 custom-text">S.S.S</p>
+        <p class="ms-3 mb-0 custom-text" id="SSS">S.S.S</p>
       </div>
 
       <ul class="navbar-nav d-flex justify-content-center aling-items-center ">
