CASI CASI ULTIMA SUBIDA

--- a/Pages/Preguntas Frecuentes.html
+++ b/Pages/Preguntas Frecuentes.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Real world Frontend Website Design using html css js</title>
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +26,7 @@
 <body>
     <div class="main">
         <header class="header">
-            <a href="" class="logo">LOGO</a>
+            <a href="" class="logo"><img src="" alt=""></a>
             <div class="menuToggle"></div>
             <nav class="nav">
                 <ul>
