--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <title>SSS</title>
 
 <!--Favicon(Icono de la pestaña)-->
-<link rel="icon" type="image/x-icon" href="./IMG/LOGO.png">
+<link rel="icon" type="image/x-icon" href="./IMG/LOGOIX.svg">
 
 <!--CSS DE EL INICIO-->
 <link rel="stylesheet" href="./CSS/style.css">
@@ -27,7 +27,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
-   
+   <script src="./JS/Navbar y Footer/Footer/footerIndex.js"></script>
 
 </head>
 
@@ -36,7 +36,7 @@
     <nav class="header-nav">
       <div class="header-nav-container">
         <a href="#hero" class="header-nav__logo-container">
-          <img src="./IMG/LOGO2.svg" alt="Logo de la Web" class="header-nav__logo" width="48" height="48" />
+          <img src="./IMG/LOGOIX.svg" alt="Logo de la Web" class="header-nav__logo" width="48" height="48" />
         </a>
         <figure class="header-nav__menu-icon-container" id="headerNavMenuIconContainer">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#fff" class="header-nav__menu-icon">
@@ -242,95 +242,10 @@
 
 
 
-<div class="header1">
-
-  <!--Content before waves-->
-  <div class="inner-header flex">
-  <!--Just the logo.. Don't mind this-->
-  
-  <h1>SUPERMARKET STORAGE SYSTEM</h1>
-  </div>
-  
-  <p>hlaaddsdsads</p>
-  
-  <!--Waves Container-->
-  <div>
-  <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-  viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
-  <defs>
-  <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
-  </defs>
-  <g class="parallax">
-  <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7" />
-  <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
-  <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
-  <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
-  </g>
-  </svg>
-  </div>
-
-  <footer class="bg-light text-center text-white">
-    <!-- Grid container -->
-    <div class="container p-4 pb-0">
-      <!-- Section: Social media -->
-      <section class="mb-4">
-      
-</div>
+<div id="footerContainer"></div>
 
 
-        <!-- Instagram -->
-        <a class="btn btn-outline-light btn-floating m-1"
-        style="background-color: #3b5998;"
-      href="#!"
-      role="button"
-          ><i class="bi bi-instagram"></i></a>
-  
-        
-        <a class="btn btn-outline-light btn-floating m-1" style="background-color: #3b5998;"
-        href="#!"
-        role="button"
-          ><i class="bi bi-facebook"></i></a>
-  
-        <!-- Github -->
-        <a class="btn btn-outline-light btn-floating m-1" 
-        style="background-color: #3b5998;"
-      href="#!"
-      role="button"
-          ><i class="bi bi-messenger"></i>
-        </a>
-
-        <a class="btn btn-outline-light btn-floating m-1" 
-        style="background-color: #3b5998;"
-      href="#!"
-      role="button"
-          ><i class="bi bi-linkedin"></i
-        ></a>
-
-
-        <a class="btn btn-outline-light btn-floating m-1" 
-        style="background-color: #3b5998;"
-        href="#!"
-        role="button"
-        ><i class="bi bi-twitter"></i>
-        </a>
-
-
-        <a class="btn btn-outline-light btn-floating m-1"
-        style="background-color: #3b5998;"
-        href="#!"
-        role="button"
-          ><i class="bi bi-envelope-at-fill"></i></a>
-  
-    <!-- Copyright -->
-    <div class="text-center p-3" style="background-color: #fff;">
-      <a href="">© 2020 Copyright:</a>
-      <a class="text-black" href="https://mdbootstrap.com/">MDBootstrap.com</a>
-    </div>
-    <!-- Copyright -->
-  </footer>
-
-
-
+<script src="./JS/Navbar y Footer/Footer/cargarFooterIndex.js"></script>
 <script src="./JS/index.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa" crossorigin="anonymous"></script>
