--- a/index.html
+++ b/index.html
@@ -98,16 +98,16 @@
       <div class="learning__container">
         <h2 class="learning__topic-title">SSS</h2>
         <p class="learning__paragraph">
-          SSS(Supermarket Storage System) Significa 
+          SSS(Supermarket Storage System) Significa sistema de almacenamiento de supermercado
         </p>
         <div class="learning__topics">
           <div class="learning__topic">
             <div class="learning__topic-icon-container">
               <img src="./img/code.svg" alt="Ícono de etiqueta" class="learning__topic-icon" />
             </div>
-            <h3 class="learning__topic-title">1</h3>
+            <h3 class="learning__topic-title">Lenguaje de Programación</h3>
             <p class="learning__topic-paragraph">
-             Lorem ipsum dolor sit amet consectetur adipisicing elit. Est optio nihil, placeat molestiae reprehenderit dolore eligendi expedita quasi nemo. Unde fugit doloremque pariatur nihil minima iure voluptatibus velit tempore blanditiis.
+              El programa fueelaborado con el lenguaje de programacion C# y Sql 
             </p>
           </div>
 
@@ -115,9 +115,9 @@
             <div class="learning__topic-icon-container">
               <img src="./img/shapes.svg" alt="Ícono de componentes" class="learning__topic-icon" />
             </div>
-            <h3 class="learning__topic-title">2</h3>
+            <h3 class="learning__topic-title">Con que se elaboro ?</h3>
             <p class="learning__topic-paragraph">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, laudantium expedita obcaecati quisquam dignissimos adipisci quam consequatur, est id consectetur quo! Laborum, voluptas hic. Dolores quaerat perspiciatis laborum est rerum!
+             Este programa se desarrollo con el editor de texto Visual Studio Code
             </p>
           </div>
 
@@ -125,9 +125,9 @@
             <div class="learning__topic-icon-container">
               <img src="./img/paint.svg" alt="Ícono de estilos" class="learning__topic-icon" />
             </div>
-            <h3 class="learning__topic-title"> 3</h3>
+            <h3 class="learning__topic-title">Fecha de desarrollo</h3>
             <p class="learning__topic-paragraph">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti facilis eius et incidunt fuga vitae, minus explicabo aspernatur magnam nisi. At quaerat modi earum maiores ullam alias. Illo, neque laboriosam.
+             La fecha de Inicio de elaboracion de este programa es de el 9 de junio de el 2023 hasta el el 29 de septiembre de el 2023
             </p>
           </div>
         </div>
@@ -163,7 +163,7 @@
   <br>
   <br>
   <br>
-  <h1 class="unico">¿Qué es Supermarket Storage System?</h1>
+  <h1 class="unico col-lg-7 col-md-12 col-sm-12">¿Qué es Supermarket Storage System?</h1>
   <div class="row">
     <div class="col-lg-7 col-md-12 col-sm-12 col-12 espacio imagen">
       <img src="./IMG/ilustracion1.svg" alt="Imagen" class="img-fluid"> 
