--- a/Pages/Acerca De Nosotros.html
+++ b/Pages/Acerca De Nosotros.html
@@ -14,7 +14,7 @@
 <title>SSS</title>
 
 <!--Favicon(Icono de la pestaña)-->
-<link rel="icon" type="image/x-icon" href="./IMG/LOGO.png">
+<<link rel="icon" type="image/x-icon" href="../IMG/LOGOIX.svg">
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
