LITERALMENTE NO FALTA CASI NADA

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <a href="./Pages/Contactanos.html" class="header-nav__menu-link">CONTACTANOS</a>
           </li>
           <li class="header-nav__menu-link-item">
-            <a href="./Pages/Preguntas Frecuentes.html" class="header-nav__menu-link">PREGUNTAS FRECUENTES</a>
+            <a href="./Pages/Preguntas Frecuente.html" class="header-nav__menu-link">PREGUNTAS FRECUENTES</a>
           </li>
           
           
@@ -81,10 +81,10 @@
       </div>
       <a href="./Pages/Licencia.html" class="hero__learn-button hero__learn-button--active">COMPRAR</a>
       <figure class="hero__stars-image-container">
-        <img src="./img/hero-stars.png" alt="Estrellas de fondo" class="hero__stars-image" />
+        <img src="./img/hero" alt="Estrellas de fondo" class="hero__stars-image" />
       </figure>
       <figure class="hero__moon-image-container">
-        <img src="./img/hero-moon.png" alt="Estrellas de fondo" class="hero__moon-image" />
+        <img src="./img/hero" alt="Estrellas de fondo" class="hero__moon-image" />
       </figure>
       <figure class="hero__mountains-behind-image-container">
         <img src="./IMG/Copia de HOAL.svg" alt="Estrellas de fondo" class="hero__mountains-behind-image" />
