--- a/Pages/Acerca De Nosotros.html
+++ b/Pages/Acerca De Nosotros.html
@@ -165,13 +165,13 @@
       <div id="carouselExampleAutoplaying" class="container carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../IMG/img preguntas frecuentes/VISION.png" class="d-block w-100" alt="...">
+            <img src="../IMG/img Sobre Nosotros/nos 1.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="../IMG/img preguntas frecuentes/VISION.png" class="d-block w-100" alt="...">
+            <img src="../IMG/img Sobre Nosotros/nos 2.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="../IMG/img preguntas frecuentes/VISION.png" class="d-block w-100" alt="...">
+            <img src="../IMG/img Sobre Nosotros/nos 5.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
