--- a/Pages/Contactanos.html
+++ b/Pages/Contactanos.html
@@ -26,7 +26,7 @@
         <div class="container-fluid">
           
           <a class="navbar-brand" href="#"><a class="navbar-brand" href="#">
-            <img src="./IMG/LOGO2.svg" alt="Bootstrap" width="30" height="34">
+            <img src="../IMG/LOGOIX.svg" alt="Bootstrap" width="30" height="34">
           </a>
       </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,7 +48,7 @@
                 <a class="nav-link" href="../Pages/Contactanos.html"><button type="button" class="btn ">CONTACTANOS</button></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../Pages/Preguntas Frecuentes.html"><button type="button" class="btn ">PREGUNTAS FRECUENTES</button></a>
+                <a class="nav-link" href="../Pages/Preguntas Frecuente.html"><button type="button" class="btn ">PREGUNTAS FRECUENTES</button></a>
               </li>
             </ul>
             <ul class="navbar-nav ml-auto"> <!-- Utilizamos la clase "ml-auto" para mover "LICENCIA" a la derecha -->
