--- a/Pages/Funcionalidades.html
+++ b/Pages/Funcionalidades.html
@@ -67,8 +67,8 @@
         <div class="container__cover">
             <div class="container__info">
                 <h1>Funciones?</h1>
-                <h2>Herramietas?</h2>
-                <p>Alguna vez te has preguntado la cnatidad de supermercados que pierden dinero a diario por que no pueden agilizar de un mejor manera el proceso de compra ,con este program lo podemos solucionar</p>
+                <h2>Ayudas?</h2>
+                <p>Alguna vez te has preguntado la cnatidad de supermercados que pierden dinero a diario por que no pueden agilizar de un mejor manera el proceso de compra ,</p>
                 <a href="#sec" class="btn">Leer Más</a>
             </div>
             <div class="container__vector">
@@ -166,7 +166,8 @@
     anteriormente creado en el frmPrimerUso y la contraseña."  data-title="FRM iniciar sesion" >
       <div class="option">
         <img src="images/diseño.svg" alt="">
-        <h2>FORM INICIO DE SESION</h2>
+        <h2>FORM </h2>
+        <h2>INICIO DE SESION</h2>
       </div>
     </a>
     <a href="#funcion1" data-img="../IMG/Img Funcionalidades/FORM3.jpeg"   data-description="frmMenu: Es donde se muestran todos los apartados para
@@ -174,14 +175,16 @@
     cruds" data-title="FRM Menú" >
       <div class="option">
         <img src="images/pelicula.svg" alt="">
-        <h2>FORM MENU</h2>
+        <h2>FORM </h2>
+        <h2>MENU</h2>
       </div>
     </a>
     <a href="#" data-img="../IMG/Img Funcionalidades/FORM4.jpeg" data-title="FMR empleado" data-description="frmEmpleado: Donde se agrega un nuevo empleado, que a la vez
     se le asigna un nuevo Usuario ">
       <div class="option">
         <img src="images/imagenes.svg" alt="">
-        <h2>FORM EMPLEADO</h2>
+        <h2>FORM </h2>
+        <h2>EMPLEADO</h2>
       </div>
     </a>
 
@@ -190,7 +193,8 @@
     ">
       <div class="option">
         <img src="images/marketing.svg" alt="">
-        <h2>FORM PRODUCTO </h2>
+        <h2>FORM  </h2>
+        <h2>PRODUCTO</h2>
       </div>
     </a>
 
