--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
   <br>
   <br>
   <br>
-  <h1 class="unico col-lg-7 col-md-12 col-sm-12">¿Qué es Supermarket Storage System?</h1>
+  <h1 class="t13 ">¿Qué es Supermarket Storage System?</h1>
   <div class="row">
     <div class="col-lg-7 col-md-12 col-sm-12 col-12 espacio imagen">
       <img src="./IMG/ilustracion1.svg" alt="Imagen" class="img-fluid"> 
@@ -213,7 +213,7 @@
   <div class="row">
     <br>
     <br>
-    <h1 class="">¿Por que se hizo este Proyecto?</h1>
+    <h1 class="t12">¿Por que se hizo este Proyecto?</h1>
 <br>
 <br>
     <div class="col-lg-7 col-md-12 col-sm-12 col-12 espacio imagen">
