--- a/Pages/Preguntas Frecuente.html
+++ b/Pages/Preguntas Frecuente.html
@@ -146,7 +146,7 @@
 </div>
 
 
-
+<br>
 <main>
 <div class="contenido-izquierdo">
   <h1 class="title23">Que necesitas saber?</h1>
@@ -156,9 +156,8 @@
 
   <div class="main-menu col-lg-6">
 
-    <a href="#" data-img="../IMG/Img Funcionalidades/FORM1.jpeg" data-description="frmPrimerUso: Este fromulario aparece cuando el programa es
-    ejecutado por primera vez, se crea un usuario tipo administrador
-    " data-title="fORM primer uso">
+    <a href="#" data-img="../IMG/Img Funcionalidades/FORM1.jpeg" data-description=" Su funcion es crear un primer usuario para que este pueda utilizar la aplicacion y todas sus funciones
+    " data-title="Primer Uso?">
       <div class="option">
         <img src="." alt="">
         <h2>-¿Cómo funciona 
@@ -166,25 +165,24 @@
         <h2> el primer uso?</h2>
       </div>
     </a>
-    <a href="#" data-img="../IMG/Img Funcionalidades/FORM2.jpeg" data-description="frmIniciarSesion: Este formulario se abrira cuando se quiera
-    abrir de nuevo el programa cada vez, tendra que usar el usuario 
-    anteriormente creado en el frmPrimerUso y la contraseña."  data-title="FRM iniciar sesion" >
+
+
+    <a href="#" data-img="../IMG/Img Funcionalidades/FORM2.jpeg" data-description=" Contamos con un apartado para este tipo de situaciones, en el cual solo es necesario el nombre de el usuario"  data-title="Olvide Mi Contraseña😨" >
       <div class="option">
         <img src="images/diseño.svg" alt="">
         <h2>-¿Qué puedo hacer si no recuerdo mi contraseña?</h2>
       </div>
     </a>
-    <a href="#funcion1" data-img="../IMG/Img Funcionalidades/FORM3.jpeg"   data-description="frmMenu: Es donde se muestran todos los apartados para
-    ir ejecutando todos los formularios y poder ir agregando 
-    cruds" data-title="FRM Menú" >
+
+    <a href="#funcion1" data-img="../IMG/Img Funcionalidades/FORM3.jpeg"   data-description=" Si, esta diferencia la podemos encontrar cuando estemos en el menu, ya que un administrador tiene acceso a todas las funciones, y el empleado tiene acceso a ciertas funciones, como: Factura y detalles de factura" data-title="Diferencias De Roles ?" >
       <div class="option">
         <img src="images/pelicula.svg" alt="">
         <h2>-¿Existe alguna diferencia entre administrador y empleado?
         </h2>
       </div>
     </a>
-    <a href="#" data-img="../IMG/Img Funcionalidades/FORM4.jpeg" data-title="FMR empleado" data-description="frmEmpleado: Donde se agrega un nuevo empleado, que a la vez
-    se le asigna un nuevo Usuario ">
+
+    <a href="#" data-img="../IMG/Img Funcionalidades/FORM4.jpeg" data-title="Agregar Productos" data-description=" En el apartado agregar productos contamos con esta funcion, para ingresar un producto, es importante cumplir con todos los requisitos pedidos en el apartado ">
       <div class="option">
         <img src="images/imagenes.svg" alt="">
         <h2>-¿Cómo puedo ingresar un nuevo producto al sistema?
@@ -192,12 +190,112 @@
       </div>
     </a>
 
+    </div>
+
+
+
+
+
+
+
+
+    <div class="main-menu col-lg-6">
+
+    <a href="#" data-img="../IMG/Img Funcionalidades/FORM4.jpeg" data-title="Pagina Web?" data-description=" Una página web informativa puede ser una herramienta valiosa para atraer a clientes, proporcionar información sobre ubicación, horarios de operación, promociones y eventos especiales, y promover la marca del supermercado.">
+      <div class="option">
+        <img src="images/imagenes.svg" alt="">
+        <h2>¿Por qué necesitamos una página web informativa para el supermercado?
+        </h2>
+      </div>
+    </a>
+
+
+    <a href="#" data-img="../IMG/Img Funcionalidades/FORM4.jpeg" data-title="Ventajas? " data-description=": El sistema de administración puede ofrecer ventajas como una gestión de inventario más eficiente, análisis de datos en tiempo real, reducción de errores humanos y mejora de la experiencia del cliente. ">
+      <div class="option">
+        <img src="images/imagenes.svg" alt="">
+        <h2>¿Qué ventajas tiene el sistema de administración ?
+        </h2>
+      </div>
+    </a>
+
+    <a href="#" data-img="../IMG/Img Funcionalidades/FORM4.jpeg" data-title="Comentarios😁" data-description="Apreciamos mucho sus comentarios y sugerencias. Siempre estamos dispuestos a escuchar sus comentarios para mejorar nuestros servicios y satisfacer mejor sus necesidades como cliente. Puede proporcionar comentarios a través de la página web. ">
+      <div class="option">
+        <img src="images/imagenes.svg" alt="">
+        <h2>¿Qué comentarios y sugerencias son bienvenidos para mejorar nuestros servicios?
+        </h2>
+      </div>
+    </a>
+
+    <a href="#" data-img="../IMG/Img Funcionalidades/FORM4.jpeg" data-title="Contacto? " data-description=" Los supermercados interesados pueden ponerse en contacto con nosotros a través de la página web, completando un formulario de contacto o utilizando la información de contacto proporcionada. ">
+      <div class="option">
+        <img src="images/imagenes.svg" alt="">
+        <h2>¿Cómo pueden los interesados en su sistema ponerse en contacto y obtener más información?
+        </h2>
+      </div>
+    </a>
+
+
+
+  </div>
+
+
+
+
+
+
+  <div class="main-menu col-lg-6">
+
+    <a href="#" data-img="../IMG/Img Funcionalidades/FORM4.jpeg" data-title="Inspiración🤖" data-description=" La inspiración detrás del desarrollo de nuestro sistema de administración y la página web fue mejorar la eficiencia operativa de los supermercados y proporcionar información útil a los interesados.">
+      <div class="option">
+        <img src="images/imagenes.svg" alt="">
+        <h2>¿Cuál fue la inspiración detrás del desarrollo de este sistema y su página web?
+        </h2>
+      </div>
+    </a>
+
+
+    <a href="#" data-img="../IMG/Img Funcionalidades/FORM4.jpeg" data-title="Problemas 😣 " data-description=" Durante el desarrollo, enfrentamos desafíos técnicos y logísticos que requerían soluciones creativas. Superamos estos desafíos con la dedicación de nuestro equipo de desarrollo. ">
+      <div class="option">
+        <img src="images/imagenes.svg" alt="">
+        <h2>¿Qué desafíos se enfrentaron durante el desarrollo de este Proyecto?
+        </h2>
+      </div>
+    </a>
+
+    <a href="#" data-img="../IMG/Img Funcionalidades/FORM4.jpeg" data-title="Beneficios 😯" data-description="Nuestro sistema ayuda a los supermercados a optimizar la gestión de inventario, mejorar la toma de decisiones y aumentar la rentabilidad al ofrecer datos en tiempo real sobre el desempeño de la tienda. ">
+      <div class="option">
+        <img src="images/imagenes.svg" alt="">
+        <h2>¿Cómo pueden los supermercados beneficiarse de este sistema en términos de eficiencia ?
+
+
+        </h2>
+      </div>
+    </a>
+
+    <a href="#" data-img="../IMG/Img Funcionalidades/FORM4.jpeg" data-title="Que Transmitimos? 🧐 " data-description=" Nos gustaría destacar nuestro compromiso de brindar soluciones efectivas y ser un recurso confiable para el éxito de los supermercados. Estamos aquí para apoyar a nuestros clientes en su crecimiento y gestión eficiente. ">
+      <div class="option">
+        <img src="images/imagenes.svg" alt="">
+        <h2>¿Qué mensaje principal le gustaría transmitir a los clientes interesados en su sistema ?
+        </h2>
+      </div>
+    </a>
+
+
+
+  </div>
+
+
+
+
+
+
+
    
 
   </div>
 
 </main>
-
+<br>
                
          
 <div class="container">
