--- a/Pages/Funcionalidades.html
+++ b/Pages/Funcionalidades.html
@@ -69,7 +69,7 @@
                 <h1>Funciones?</h1>
                 <h2>Ayudas?</h2>
                 <p>Alguna vez te has preguntado la cnatidad de supermercados que pierden dinero a diario por que no pueden agilizar de un mejor manera el proceso de compra ,</p>
-                <a href="#sec" class="btn">Leer Más</a>
+                <a href="#ma" class="btn">Leer Más</a>
             </div>
             <div class="container__vector">
                 <img src="../IMG/Img Funcionalidades/Imagen 1 pagina 2.svg" alt="">
@@ -146,49 +146,49 @@
 </div>
 
 
-<main>
+<main id="ma">
 
   <h1 class="title">Menú De funciones</h1>
 
   <div class="main-menu">
 
-    <a href="#" data-img="../IMG/Img Funcionalidades/FORM1.jpeg" data-description="frmPrimerUso: Este fromulario aparece cuando el programa es
+    <a href="#" data-img="../IMG/Img Funcionalidades/Primer uso1.png" data-description="frmPrimerUso: Este fromulario aparece cuando el programa es
     ejecutado por primera vez, se crea un usuario tipo administrador
     " data-title="fORM primer uso">
       <div class="option">
-        <img src="." alt="">
+        <img src="" alt="">
         <h2>FORM </h2>
         <h2> PRIMER USO</h2>
       </div>
     </a>
-    <a href="#" data-img="../IMG/Img Funcionalidades/FORM2.jpeg" data-description="frmIniciarSesion: Este formulario se abrira cuando se quiera
+    <a href="#" data-img="../IMG/Img Funcionalidades/Inicio de sesion1.png" data-description="frmIniciarSesion: Este formulario se abrira cuando se quiera
     abrir de nuevo el programa cada vez, tendra que usar el usuario 
     anteriormente creado en el frmPrimerUso y la contraseña."  data-title="FRM iniciar sesion" >
       <div class="option">
-        <img src="images/diseño.svg" alt="">
+        <img src="" alt="">
         <h2>FORM </h2>
         <h2>INICIO DE SESION</h2>
       </div>
     </a>
-    <a href="#funcion1" data-img="../IMG/Img Funcionalidades/FORM3.jpeg"   data-description="frmMenu: Es donde se muestran todos los apartados para
+    <a href="#funcion1" data-img="../IMG/Img Funcionalidades/Menu1.png"   data-description="frmMenu: Es donde se muestran todos los apartados para
     ir ejecutando todos los formularios y poder ir agregando 
     cruds" data-title="FRM Menú" >
       <div class="option">
-        <img src="images/pelicula.svg" alt="">
+        <img src="" alt="">
         <h2>FORM </h2>
         <h2>MENU</h2>
       </div>
     </a>
-    <a href="#" data-img="../IMG/Img Funcionalidades/FORM4.jpeg" data-title="FMR empleado" data-description="frmEmpleado: Donde se agrega un nuevo empleado, que a la vez
+    <a href="#" data-img="../IMG/Img Funcionalidades/Empleado1.png" data-title="FMR empleado" data-description="frmEmpleado: Donde se agrega un nuevo empleado, que a la vez
     se le asigna un nuevo Usuario ">
       <div class="option">
-        <img src="images/imagenes.svg" alt="">
+        <img src="" alt="">
         <h2>FORM </h2>
         <h2>EMPLEADO</h2>
       </div>
     </a>
 
-    <a href="#" data-img="../IMG/Img Funcionalidades/FORM5.jpeg" data-title="FRM producto" data-description="frmProducto: Formulario donde se pueden ver los productos 
+    <a href="#" data-img="../IMG/Img Funcionalidades/Producto1.png" data-title="FRM producto" data-description="frmProducto: Formulario donde se pueden ver los productos 
     que están disponibles y agregar nuevos prodcutos 
     ">
       <div class="option">
@@ -198,12 +198,12 @@
       </div>
     </a>
 
-    <a href="#" data-img="../IMG/Img Funcionalidades/FORM6.jpeg"  data-title="FRM detalle Factura" data-description="frmDetalleFactura: En este formulario es donde se imprime 
+    <a href="#" data-img="../IMG/Img Funcionalidades/Detalle factura1.png"  data-title="FRM detalle Factura" data-description="frmDetalleFactura: En este formulario es donde se imprime 
     el total que daria en la factura, este cuenta con una
     llave foránea IdFactura que muestra en el dgv de DetalleFactura
     la factura que quiere que se muestre con los productos que contenga.">
       <div class="option">
-        <img src="images/blog.svg" alt="">
+        <img src="" alt="">
         <h2>FORM </h2>
         <h2>DETALLE FACTURA</h2>
       </div>
