--- a/Pages/Preguntas Frecuente.html
+++ b/Pages/Preguntas Frecuente.html
@@ -69,7 +69,7 @@
                 <h1>Preguntas</h1>
                 <h2>frecuentes</h2>
                 <p>En este espacio hablaremos sobre las preguntas mas comunes que nos hacen como las de el cosas que no uedan claras en el funcionamiento y tambien tocaremos otros temas como nuestra vision y misión</p>
-                <a href="#sec" class="btn">Leer Más</a>
+                <a href="#so" class="btn">Leer Más</a>
             </div>
             <div class="container__vector">
                 <img src="../IMG/Img Funcionalidades/Imagen 1 pagina 2.svg" alt="">
@@ -91,13 +91,12 @@
     <article class="card_item">
         <div class="card_content">
             <figure class="card_picture">
-                <img src="../IMG/Img Funcionalidades/FLEX1.svg" class="card_img">
+                <img src="../IMG/img preguntas frecuentes/user-status.svg" class="card_img">
             </figure>
 
             <div class="card_texts">
-                <h2 class="card_title">CATEGORIA?</h2>
-                <p class="card_parragraph">utilizamos visual studio 2022, donde hemos creado todos nuestros formularios y donde hemos conectado con la base de datos, usando el programa My SQL server.  
-                  En el apartado de diseño, nos hemos basado en las herramientas que nos ofrecia visual studio y bunifu, darle un toque moderno y atractivo al programa</p>
+                <h2 class="card_title">CUANTO SE TARDA EN EL DESARROLLO?</h2>
+                <p class="card_parragraph">Iniciamos el proceso de organización desde el mes de marzo y con el desarrollo de el ante proyecto, y finalizo el 28 de septiembre con la defensa de el 100%</p>
 
 
             </div>
@@ -109,13 +108,13 @@
     <article class="card_item">
         <div class="card_content">
             <figure class="card_picture">
-                <img src="../IMG/Img Funcionalidades/FLEX2.svg" class="card_img">
+                <img src="../IMG/img preguntas frecuentes/creative-process-3.svg" class="card_img">
 
             </figure>
 
             <div class="card_texts">
-                <h2 class="card_title"> BUSQUEDA?</h2>
-                <p class="card_parragraph">modernización, nos hemos basado en distintos diseños de programas ya existentes, y le hemos dado nuestro toque de modernización mediante el uso de herramientas que ofrecen Visual Studio 2022 y Bunifu</p>
+                <h2 class="card_title">HUBIERON MAS IDEAS? </h2>
+                <p class="card_parragraph">Si,  se tuvieron mas ideas y de distintas clasificaciones como por ejemplo el de una aereolinea pero se aprobo la actual sistema de administración de supermercado </p>
                 
 
 
@@ -129,13 +128,13 @@
     <article class="card_item">
       <div class="card_content">
           <figure class="card_picture">
-              <img src="../IMG/Img Funcionalidades/FLEX3.svg" class="card_img">
+              <img src="../IMG/img preguntas frecuentes/personal-data-8.svg" class="card_img">
 
           </figure>
 
           <div class="card_texts">
-              <h2 class="card_title">IDIOMA? </h2>
-              <p class="card_parragraph">Encriptacion: utilizamos la técnica de encriptación base 64 esta tecnica convierte datos binarios en una representación de caracteres legibles y seguros, mientras que la descodificacion revierte para restaurar los datos binarios</p>
+              <h2 class="card_title">TIEMPO PARA APRENDER ? </h2>
+              <p class="card_parragraph">Es un poco subjetivo, depende de la capacidad de aprendiaje de cada individuo pero si se tuviera que definir seria unos 5 o 6 meses de aprendiaje moderado </p>
               
 
 
@@ -147,7 +146,7 @@
 
 
 <br>
-<main>
+<main id="so">
 <div class="contenido-izquierdo">
   <h1 class="title23">Que necesitas saber?</h1>
 </div>
@@ -156,7 +155,7 @@
 
   <div class="main-menu col-lg-6">
 
-    <a href="#" data-img="../IMG/Img Funcionalidades/FORM1.jpeg" data-description=" Su funcion es crear un primer usuario para que este pueda utilizar la aplicacion y todas sus funciones
+    <a href="#" data-img="" data-description=" Su funcion es crear un primer usuario para que este pueda utilizar la aplicacion y todas sus funciones
     " data-title="Primer Uso?">
       <div class="option">
         <img src="." alt="">
@@ -167,14 +166,14 @@
     </a>
 
 
-    <a href="#" data-img="../IMG/Img Funcionalidades/FORM2.jpeg" data-description=" Contamos con un apartado para este tipo de situaciones, en el cual solo es necesario el nombre de el usuario"  data-title="Olvide Mi Contraseña😨" >
+    <a href="#" data-img="" data-description=" Contamos con un apartado para este tipo de situaciones, en el cual solo es necesario el nombre de el usuario"  data-title="Olvide Mi Contraseña😨" >
       <div class="option">
         <img src="images/diseño.svg" alt="">
         <h2>-¿Qué puedo hacer si no recuerdo mi contraseña?</h2>
       </div>
     </a>
 
-    <a href="#funcion1" data-img="../IMG/Img Funcionalidades/FORM3.jpeg"   data-description=" Si, esta diferencia la podemos encontrar cuando estemos en el menu, ya que un administrador tiene acceso a todas las funciones, y el empleado tiene acceso a ciertas funciones, como: Factura y detalles de factura" data-title="Diferencias De Roles ?" >
+    <a href="#funcion1" data-img=""   data-description=" Si, esta diferencia la podemos encontrar cuando estemos en el menu, ya que un administrador tiene acceso a todas las funciones, y el empleado tiene acceso a ciertas funciones, como: Factura y detalles de factura" data-title="Diferencias De Roles ?" >
       <div class="option">
         <img src="images/pelicula.svg" alt="">
         <h2>-¿Existe alguna diferencia entre administrador y empleado?
@@ -182,7 +181,7 @@
       </div>
     </a>
 
-    <a href="#" data-img="../IMG/Img Funcionalidades/FORM4.jpeg" data-title="Agregar Productos" data-description=" En el apartado agregar productos contamos con esta funcion, para ingresar un producto, es importante cumplir con todos los requisitos pedidos en el apartado ">
+    <a href="#" data-img="" data-title="Agregar Productos" data-description=" En el apartado agregar productos contamos con esta funcion, para ingresar un producto, es importante cumplir con todos los requisitos pedidos en el apartado ">
       <div class="option">
         <img src="images/imagenes.svg" alt="">
         <h2>-¿Cómo puedo ingresar un nuevo producto al sistema?
@@ -201,7 +200,7 @@
 
     <div class="main-menu col-lg-6">
 
-    <a href="#" data-img="../IMG/Img Funcionalidades/FORM4.jpeg" data-title="Pagina Web?" data-description=" Una página web informativa puede ser una herramienta valiosa para atraer a clientes, proporcionar información sobre ubicación, horarios de operación, promociones y eventos especiales, y promover la marca del supermercado.">
+    <a href="#" data-img="" data-title="Pagina Web?" data-description=" Una página web informativa puede ser una herramienta valiosa para atraer a clientes, proporcionar información sobre ubicación, horarios de operación, promociones y eventos especiales, y promover la marca del supermercado.">
       <div class="option">
         <img src="images/imagenes.svg" alt="">
         <h2>¿Por qué necesitamos una página web informativa para el supermercado?
@@ -210,7 +209,7 @@
     </a>
 
 
-    <a href="#" data-img="../IMG/Img Funcionalidades/FORM4.jpeg" data-title="Ventajas? " data-description=": El sistema de administración puede ofrecer ventajas como una gestión de inventario más eficiente, análisis de datos en tiempo real, reducción de errores humanos y mejora de la experiencia del cliente. ">
+    <a href="#" data-img="" data-title="Ventajas? " data-description=": El sistema de administración puede ofrecer ventajas como una gestión de inventario más eficiente, análisis de datos en tiempo real, reducción de errores humanos y mejora de la experiencia del cliente. ">
       <div class="option">
         <img src="images/imagenes.svg" alt="">
         <h2>¿Qué ventajas tiene el sistema de administración ?
@@ -218,7 +217,7 @@
       </div>
     </a>
 
-    <a href="#" data-img="../IMG/Img Funcionalidades/FORM4.jpeg" data-title="Comentarios😁" data-description="Apreciamos mucho sus comentarios y sugerencias. Siempre estamos dispuestos a escuchar sus comentarios para mejorar nuestros servicios y satisfacer mejor sus necesidades como cliente. Puede proporcionar comentarios a través de la página web. ">
+    <a href="#" data-img="" data-title="Comentarios😁" data-description="Apreciamos mucho sus comentarios y sugerencias. Siempre estamos dispuestos a escuchar sus comentarios para mejorar nuestros servicios y satisfacer mejor sus necesidades como cliente. Puede proporcionar comentarios a través de la página web. ">
       <div class="option">
         <img src="images/imagenes.svg" alt="">
         <h2>¿Qué comentarios y sugerencias son bienvenidos para mejorar nuestros servicios?
@@ -226,7 +225,7 @@
       </div>
     </a>
 
-    <a href="#" data-img="../IMG/Img Funcionalidades/FORM4.jpeg" data-title="Contacto? " data-description=" Los supermercados interesados pueden ponerse en contacto con nosotros a través de la página web, completando un formulario de contacto o utilizando la información de contacto proporcionada. ">
+    <a href="#" data-img="" data-title="Contacto? " data-description=" Los supermercados interesados pueden ponerse en contacto con nosotros a través de la página web, completando un formulario de contacto o utilizando la información de contacto proporcionada. ">
       <div class="option">
         <img src="images/imagenes.svg" alt="">
         <h2>¿Cómo pueden los interesados en su sistema ponerse en contacto y obtener más información?
@@ -245,7 +244,7 @@
 
   <div class="main-menu col-lg-6">
 
-    <a href="#" data-img="../IMG/Img Funcionalidades/FORM4.jpeg" data-title="Inspiración🤖" data-description=" La inspiración detrás del desarrollo de nuestro sistema de administración y la página web fue mejorar la eficiencia operativa de los supermercados y proporcionar información útil a los interesados.">
+    <a href="#" data-img="" data-title="Inspiración🤖" data-description=" La inspiración detrás del desarrollo de nuestro sistema de administración y la página web fue mejorar la eficiencia operativa de los supermercados y proporcionar información útil a los interesados.">
       <div class="option">
         <img src="images/imagenes.svg" alt="">
         <h2>¿Cuál fue la inspiración detrás del desarrollo de este sistema y su página web?
@@ -254,7 +253,7 @@
     </a>
 
 
-    <a href="#" data-img="../IMG/Img Funcionalidades/FORM4.jpeg" data-title="Problemas 😣 " data-description=" Durante el desarrollo, enfrentamos desafíos técnicos y logísticos que requerían soluciones creativas. Superamos estos desafíos con la dedicación de nuestro equipo de desarrollo. ">
+    <a href="#" data-img="" data-title="Problemas 😣 " data-description=" Durante el desarrollo, enfrentamos desafíos técnicos y logísticos que requerían soluciones creativas. Superamos estos desafíos con la dedicación de nuestro equipo de desarrollo. ">
       <div class="option">
         <img src="images/imagenes.svg" alt="">
         <h2>¿Qué desafíos se enfrentaron durante el desarrollo de este Proyecto?
@@ -262,7 +261,7 @@
       </div>
     </a>
 
-    <a href="#" data-img="../IMG/Img Funcionalidades/FORM4.jpeg" data-title="Beneficios 😯" data-description="Nuestro sistema ayuda a los supermercados a optimizar la gestión de inventario, mejorar la toma de decisiones y aumentar la rentabilidad al ofrecer datos en tiempo real sobre el desempeño de la tienda. ">
+    <a href="#" data-img="" data-title="Beneficios 😯" data-description="Nuestro sistema ayuda a los supermercados a optimizar la gestión de inventario, mejorar la toma de decisiones y aumentar la rentabilidad al ofrecer datos en tiempo real sobre el desempeño de la tienda. ">
       <div class="option">
         <img src="images/imagenes.svg" alt="">
         <h2>¿Cómo pueden los supermercados beneficiarse de este sistema en términos de eficiencia ?
@@ -272,7 +271,7 @@
       </div>
     </a>
 
-    <a href="#" data-img="../IMG/Img Funcionalidades/FORM4.jpeg" data-title="Que Transmitimos? 🧐 " data-description=" Nos gustaría destacar nuestro compromiso de brindar soluciones efectivas y ser un recurso confiable para el éxito de los supermercados. Estamos aquí para apoyar a nuestros clientes en su crecimiento y gestión eficiente. ">
+    <a href="#" data-img="" data-title="Que Transmitimos? 🧐 " data-description=" Nos gustaría destacar nuestro compromiso de brindar soluciones efectivas y ser un recurso confiable para el éxito de los supermercados. Estamos aquí para apoyar a nuestros clientes en su crecimiento y gestión eficiente. ">
       <div class="option">
         <img src="images/imagenes.svg" alt="">
         <h2>¿Qué mensaje principal le gustaría transmitir a los clientes interesados en su sistema ?
